syntax = "proto3";

package square;

option java_package = "com.proto.square";

option java_multiple_files = true;

message SquareRequest {
  int32 number = 1;
}

message SquareResponse {
  int32 number = 2;
  int32 numberSquare = 1;
}

service SquareService {
  rpc square(SquareRequest) returns (SquareResponse);
  rpc squareBiDirectionStream(stream SquareRequest) returns (stream SquareResponse);
}